*** empty log message ***

--- a/homepage/donate.html
+++ b/homepage/donate.html
@@ -62,23 +62,25 @@
 
     <div class="scrollable_div">
 
-        <span class="content_main_bold">Donate</span><br><br>
+        <span class="content_main_bold">Make a donation</span><br><br>
 
         I hope you enjoy using Data Crow. In case you want to make a donation you can use one of the buttons below. Donations can be done
         via Paypal. In case you want your donation to be visible to the public I suggest you use the Sourceforge.net donation method (which also uses Paypal).
 
         <br><br><br>
 
-        <span class="content_main_bold">Direct Paypal donation</span><br><br>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="84491">
             <input type="image" src="https://www.paypal.com/nl_NL/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="">
             <img alt="" border="0" src="https://www.paypal.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
         </form>
+        <i>Direct Paypal donation</i>
 
-        <span class="content_main_bold">Paypal donation via Sourceforge.net</span><br><br>
-        <a href="http://sourceforge.net/donate/index.php?group_id=84631" target="information"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Sourceforge.net" /></a>
+        <br><br><br>
+
+        <a href="http://sourceforge.net/donate/index.php?group_id=84631" target="information"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Sourceforge.net" /></a><br>
+        <i>Paypal donation via Sourceforge.net</i>
 
     </div>
 
