--- a/homepage/download.html
+++ b/homepage/download.html
@@ -63,16 +63,18 @@
 
     <div class="scrollable_div">
 
-        <span class="content_main_bold">Data Crow</span><br><br>
+        <span class="content_main_bold">Data Crow - full version</span><br><br>
+        <i>Data Crow requires Java from <a href="http://java.sun.com">Sun</a></i><br><br>
         <li>Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip" target="information">3.4.7</a></li>
         <li>Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip" target="information">3.4.7</a></li>
         <li>Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe" target="information">3.4.7</a></li>
         <li>Source code: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip" target="information">3.4.7</a></li>
 
+
         <br><br>
 
-        <span class="content_main_bold">Web Module</span><br><br>
-        The web module is an extension and should be installed on top of a full Data Crow installation <br><br>
+        <span class="content_main_bold">Data Crow web module</span><br><br>
+        <i>The web module is an extension and should be installed on top of a full Data Crow installation.</i><br><br>
         <li>Web module: Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip" target="information">1.2</a></li>
         <li>Web module: Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip" target="information">1.2</a></li>
         <li>Web module: Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe" target="information">1.2</a></li>
@@ -80,7 +82,7 @@
         <br><br>
 
         <span class="content_main_bold">Documentation</span><br><br>
-        Data Crow has an internal help system. However for some functionality the internal help is simply not enough. For these topics separate manuals have been created.
+        Data Crow has an internal help system. However for some functionality the internal help is simply not enough. For these topics separate manuals have been created.<br><br>
 
         <li>How to create your own modules: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_modules.pdf" target="information">PDF</a></li>
         <li>How to create your own report: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_a_report.pdf" target="information">PDF</a></li>
