--- a/homepage/history.html
+++ b/homepage/history.html
@@ -66,29 +66,29 @@
         <span class="content_main_bold">History</span><br><br>
         This page explains a bit more about the history of this cataloging software.
 
-        <br><br>
+        <br><br><br>
         <span class="content_main_bold">LibCD</span><br><br>
         I would like to explain a bit more about the history of Data Crow. It all started when I created a small program called LibCD. This product allowed users to insert file information manually. It did not have an item form and only had the table view (which still exists today). This program did not attract any attention, I was the sole user. I started the LibCD project to get my own list of software CD's in a program and to improve my programming skills. This project was started off somewhere in 2001.
 
-        <br><br>
+        <br><br><br>
         <span class="content_main_bold">CD Library</span><br><br>
         In 2002, February to be exact, I discovered Sourceforge.net and decided to make my little project public. I also decided to change the name from LibCD to CD Library. This software allowed registration of software and mp3's. I would like to say it had two modules, but then I would be lying. The software was static and users had only very limited control over the behavior of the product. It was able to import a sort of CSV file (via a very complex UI) and was also capable of parsing information from MP3 files. Again this version did not really get anyone excited and I remained the sole user. The latest version of CD Library is still available for download at: <a href="http://sourceforge.net/projects/libcd/">Sourceforge.net</a>.
 
-        <br><br>
+        <br><br><br>
         <span class="content_main_bold">Data Crow</span><br><br>
-        Then came the year 2003. During a holiday in France I came to the decision to create an altogether new cataloguing product. The goals were to attract more attention, to add new modules and to use online services instead of relying only on file parsing. CD library was canned and a new product was born with the name Data Crow. The name was chosen by my wife (who was my girlfriend at the time) so I can neither be blamed or credited for it.<br />
+        Then came the year 2003. During a holiday in France I came to the decision to create an altogether new cataloguing product. The goals were to attract more attention, to add new modules and to use online services instead of relying only on file parsing. CD library was canned and a new product was born with the name Data Crow. The name was chosen by my wife (who was my girlfriend at the time) so I can neither be blamed or credited for it.
         <br><br>
         The software slowly but surely became more flexible. The source code was change to be more generic (where possible) and extensibility and code reuse became the main areas of attention. The online search became more and more important. It allowed the catalogued items to be enriched with information from web sites like Amazon, Imdb, MusicBrainz and many others (with more still being added).<br />
         The Data Crow 3 version introduced wizards for creating modules. Not many people know this but the Data Crow 3 version was a total rewrite of the core of Data Crow. The new flexible module structure allowed modules to be defined in an XML format. The underlying database was maintained by the rewritten data layer. To allow quicker access to the data all items were loaded in memory during startup. Essentially Data Crow now had its very own persistance layer.
         <br><br>
         The ability to create user modules was requested by many users. The strength of this functionality was that, even though these modules lacked online service and file import, they benefited greatly from the Data Crow platform and the tools that it offered. The platform offered: loan management, two views, grouping, a quick view, filtering, security, advanced field settings, the item form, item deletion, updating and creation and many, many other features.
 
-        <br><br>
+        <br><br><br>
         <span class="content_main_bold">Present</span><br><br>
         Data Crow has become a framework where any kind of module can be created, new reports can be added and plugins can be created. It is slowly attracting more and more attention to itself and I belief it will continue to do so.
         I am proud of the user base Data Crow has gained over the years. Many users have helped me to improve Data Crow. I thank you all sincerely!
 
-        <br><br>
+        <br><br><br>
         <span class="content_main_bold">Future</span><br><br>
         One thing I have discovered is that this product will never be finished. I never dreamed that this project would continue expand its feature set over and over again. After all, it is just a tool to catalog / catalogue your collections. New functionality like a chat service will be added and Data Crow will be changed so that items can have an unlimited amount of images and files. The number of online services will be expanded gradually and documentation will be released focussing on plugin development and the creation of custom online services.
 
