--- a/homepage/index.html
+++ b/homepage/index.html
@@ -88,9 +88,11 @@
 
         <br><br>
         Data Crow is 100% free and 100% free of ads, viruses and spyware.<br>
-        Data Crow runs on any system where <strong>Java from Sun</strong> is installed.<br><br>
-        <a href="http://sourceforge.net" target="information"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a><br>
-        <i>Data Crow is hosted on sourceforge.net</i>
+        Data Crow runs on any system where <strong>Java from <a href="http://java.sun.com">Sun</a></strong> is installed.
+
+        <br><br><br>
+        <center><a href="http://sourceforge.net/projects/datacrow" target="new"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" border="0" alt="SourceForge.net Logo" /></a><br>
+        <i>Data Crow is hosted on sourceforge.net</i></center>
 
     </div>
 
