--- a/homepage/screenshots.html
+++ b/homepage/screenshots.html
@@ -60,35 +60,34 @@
     <td></td>
     <td rowspan="3" valign="top" class="content_main">
 
-    <div class="scrollable_div">
+    <div class="scrollable_div" style="align:center">
 
-        <span class="content_main_bold">Data Crow</span><br><br>
+    <center>
 
         <a href="pics/screenshots/software.png" target="new"><img src="pics/screenshots/software_small.png" alt="Organiser,Organizer,Cataloger" border="0"></a>
-        <br><i>Software module; the main screen.</i><br><br>
+        <br><i>Software module; the main screen.</i><br><br><br>
 
         <a href="pics/screenshots/software_skinned.png" target="new"><img src="pics/screenshots/software_skinned_small.png" alt="Organize,Organise" border="0"></a>
-        <br><i>Same as above but using one of the many skins.</i><br><br>
+        <br><i>Same as above but using one of the many skins.</i><br><br><br>
 
         <a href="pics/screenshots/onlinesearch_movie.png" target="new"><img src="pics/screenshots/onlinesearch_movie_small.png" alt="Organiser,Organizer" border="0"></a>
-        <br><i>Online movie search using Imdb.com.</i><br><br>
+        <br><i>Online movie search using Imdb.com.</i><br><br><br>
 
         <a href="pics/screenshots/itemform_audiocd.png" target="new"><img src="pics/screenshots/itemform_audiocd_small.png" alt="Organize,Organise" border="0"></a>
-        <br><i>Audio CD form.</i><br><br>
+        <br><i>Audio CD form.</i><br><br><br>
 
         <a href="pics/screenshots/fieldsettings.png" target="new"><img src="pics/screenshots/fieldsettings_small.png" alt="Organiser,Organizer" border="0"></a>
-        <br><i>Field settings.</i><br><br>
+        <br><i>Field settings.</i><br><br><br>
 
         <a href="pics/screenshots/fileimport.png" target="new"><img src="pics/screenshots/fileimport_small.png" alt="Organiser,Organizer" border="0"></a>
-        <br><i>File information import.</i><br><br>
+        <br><i>File information import.</i><br><br><br>
 
-        <br><br>
-        <span class="content_main_bold">Web Module</span><br><br>
         <a href="pics/screenshots/webmodule.png" target="new"><img src="pics/screenshots/webmodule_small.png" alt="Organiser,Organizer" border="0"></a>
-        <br><i>Partial screenshot of the web interface.</i><br><br>
+        <br><i>Partial screenshot of the web interface.</i><br><br><br>
 
         <a href="pics/screenshots/webmodule_itemform.png" target="new"><img src="pics/screenshots/webmodule_itemform_small.png" alt="Organiser,Organizer" border="0"></a>
-        <br><i>Web item form.</i><br><br>
+        <br><i>Web item form.</i>
+    </center>
 
     </div>
 
