*** empty log message ***

--- a/installer/donate.html
+++ b/installer/donate.html
@@ -2,14 +2,13 @@
 
 <body>
 
-    <h1>Make a donation</h1>
+    <h1 style="font-family: Verdana, Geneva, sans-serif;font-size: 14px;font-weight: bold;">Make a donation</h1>
 
-    You can support this project by making a donation. Below you'll find a link pointing to the donation page of Data Crow.
-    <br><br>
+    <p style="font-family: Verdana, Geneva, sans-serif;font-size: 11px;">You can support this project by making a donation. Below you'll find a link pointing to the donation page of Data Crow.</p>
 
-    <a href="http://www.datacrow.net/donate.html" target="new">http://www.datacrow.net</a>
-
-    <br>
+    <p>
+    <a style="font-family: Verdana, Geneva, sans-serif;font-size: 11px; padding:10px;text-decoration:underline; color: Black;padding: 0;" href="http://www.datacrow.net/donate.html" target="new">http://www.datacrow.net</a>
+    </p>
 
 </body>
 </html>
