--- a/readme/gpl.html
+++ b/readme/gpl.html
@@ -1,17 +1,18 @@
 <html>
+
 <body>
 
-    <h1>Data Crow: The Ultimate Cataloger</h1>
-    <h2>Copyright (C) 2009 Robert Jan van der Waals</h2>
+    <h1 style="font-family: Verdana, Geneva, sans-serif;font-size: 14px;font-weight: bold;">Data Crow: The Ultimate Cataloger</h1>
+    <h2 style="font-family: Verdana, Geneva, sans-serif;font-size: 12px;font-weight: bold;">Copyright (C) 2009 Robert Jan van der Waals</h2>
 
-    <p>
+    <p style="font-family: Verdana, Geneva, sans-serif;font-size: 11px;">
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
     </p>
 
-    <p>
+    <p style="font-family: Verdana, Geneva, sans-serif;font-size: 11px;">
     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
