--- a/homepage/download.html
+++ b/homepage/download.html
@@ -65,48 +65,50 @@
 
         <span class="content_main_bold">Data Crow - full version</span><br><br>
         <i>Data Crow requires Java from <a href="http://java.sun.com">Sun</a></i><br><br>
-        <li>Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip" target="information">3.4.7</a></li>
-        <li>Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip" target="information">3.4.7</a></li>
-        <li>Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe" target="information">3.4.7</a></li>
-        <li>Source code: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip" target="information">3.4.7</a></li>
+        <li>Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_zipped.zip" target="new">3.4.8</a></li>
+        <li>Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_installer.zip" target="new">3.4.8</a></li>
+        <li>Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_installer.exe" target="new">3.4.8</a></li>
+        <li>Source code: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_source.zip" target="new">3.4.8</a></li>
 
 
         <br><br>
 
         <span class="content_main_bold">Data Crow web module</span><br><br>
         <i>The web module is an extension and should be installed on top of a full Data Crow installation.</i><br><br>
-        <li>Web module: Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip" target="information">1.2</a></li>
-        <li>Web module: Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip" target="information">1.2</a></li>
-        <li>Web module: Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe" target="information">1.2</a></li>
+        <li>Web module: Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_zipped.zip" target="new">1.3</a></li>
+        <li>Web module: Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_installer.zip" target="new">1.3</a></li>
+        <li>Web module: Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_installer.exe" target="new">1.3</a></li>
 
         <br><br>
 
         <span class="content_main_bold">Documentation</span><br><br>
         Data Crow has an internal help system. However for some functionality the internal help is simply not enough. For these topics separate manuals have been created.<br><br>
 
-        <li>How to create your own modules: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_modules.pdf" target="information">PDF</a></li>
-        <li>How to create your own report: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_a_report.pdf" target="information">PDF</a></li>
+        <li>How to create your own modules: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_modules.pdf" target="new">PDF</a></li>
+        <li>How to create your own report: <a href="http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_a_report.pdf" target="new">PDF</a></li>
 
     </div>
 
     </td>
 
     <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
-    <td valign="top" class="content_main"><span class="content_main_bold">Latest news</span>
+    <td valign="top" class="content_main">
 
-      <br><br>
+    <!-- NEWS -->
 
-      <!-- NEWS -->
+    <span class="content_main_bold">Latest news</span>
 
-      <span class="content_main_bold">19/01/2009<br>New website</span><br>
-      The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+    <br><br>
 
-      <br><br>
+    <span class="content_main_bold">25/01/2009 ~ Data Crow 3.4.8 has been released</span><br>
+    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
 
-      <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
-      This release fixes the reporting functionality and contains fixes for other minor issues.
+    <br><br>
 
-      <!-- NEWS END -->
+    <span class="content_main_bold">19/01/2009<br>New website</span><br>
+    The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+
+    <!-- NEWS END -->
 
       </td>
 
@@ -130,9 +132,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -141,19 +143,19 @@
     <td colspan="3" class="menu8o">Web module</td>
     </tr>
   <tr>
-    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
-    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
-    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
+    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
+    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
   </tr>
-
-  <!-- END DOWNLOAD -->
-
   <tr>
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
-    </tr>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+  </tr>
+
+  <!-- END DOWNLOAD -->
+
   <tr>
     <td height="10" colspan="3"></td>
   </tr>
