*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -80,7 +80,6 @@
         <li/> Retrieve information from services like Amazon.com and Imdb.com.
         <li/> Optional web module; a web interface and an integrated web server.
         <li/> Rename your files based on the item information in Data Crow.
-        <li/> Advanced user management.
         <li/> Loan management.
         <li/> PDF and HTML reporting.
         <li/> Create new modules to, for example, maintain your stamp collection.
@@ -88,11 +87,12 @@
 
         <br><br>
         Data Crow is 100% free and 100% free of ads, viruses and spyware.<br>
-        Data Crow runs on any system where <strong>Java from <a href="http://java.sun.com">Sun</a></strong> is installed.
+        Data Crow runs on any system where <strong>Java from <a href="http://java.sun.com">Sun</a></strong> is installed.<br>
 
-        <br><br><br>
+        <br><br>
         <center><a href="http://sourceforge.net/projects/datacrow" target="new"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" border="0" alt="SourceForge.net Logo" /></a><br>
-        <i>Data Crow is hosted on sourceforge.net</i></center>
+        <i>Data Crow is hosted on sourceforge.net</i><br>
+        Thanks to Bas Uildriks for creating and designing this website!</center>
 
     </div>
 
@@ -107,13 +107,14 @@
 
     <br><br>
 
-    <span class="content_main_bold">25/01/2009 ~ Data Crow 3.4.8 has been released</span><br>
-    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
+    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
+    Fixes the reporting for the movie module and a possible startup error related to languages.
 
     <br><br>
 
-    <span class="content_main_bold">19/01/2009<br>New website</span><br>
-    The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+    <span class="content_main_bold">25/01/2009<br>Data Crow 3.4.8 has been released</span><br>
+    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
+
 
     <!-- NEWS END -->
 
