--- a/homepage/news.html
+++ b/homepage/news.html
@@ -66,6 +66,10 @@
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">26/01/2009 ~ Data Crow 3.4.8 patch 1 has been released</span><br><br>
+        Fixes the reporting for the movie module and a possible startup error related to languages.
+
+        <br><br><br>
         <span class="content_main_bold">25/01/2009 ~ Data Crow 3.4.8 has been released</span><br><br>
         The PDF reporting was broken as well as the module creation wizard. Additionally this release contains improvements for adding images to items and the music album importer.
 
@@ -222,13 +226,14 @@
 
     <br><br>
 
-    <span class="content_main_bold">25/01/2009 ~ Data Crow 3.4.8 has been released</span><br>
-    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
+    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
+    Fixes the reporting for the movie module and a possible startup error related to languages.
 
     <br><br>
 
-    <span class="content_main_bold">19/01/2009<br>New website</span><br>
-    The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+    <span class="content_main_bold">25/01/2009<br>Data Crow 3.4.8 has been released</span><br>
+    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
+
 
     <!-- NEWS END -->
 
