--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -100,15 +100,17 @@
 
     <br><br>
 
-    <span class="content_main_bold">25/01/2009 ~ Data Crow 3.4.8 has been released</span><br>
-    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
+    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
+    Fixes the reporting for the movie module and a possible startup error related to languages.
 
     <br><br>
 
-    <span class="content_main_bold">19/01/2009<br>New website</span><br>
-    The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+    <span class="content_main_bold">25/01/2009<br>Data Crow 3.4.8 has been released</span><br>
+    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
+
 
     <!-- NEWS END -->
+
   </td>
 
 
