*** empty log message ***

--- a/help/index.html
+++ b/help/index.html
@@ -35,6 +35,8 @@
             <td><a href="./items/views.html">Using views</a></td></tr>
         <tr><td></td>
             <td><a href="./items/wizard.html">The Item Wizard</a></td></tr>
+        <tr><td></td>
+            <td><a href="./items/sort.html">Sorting</a></td></tr>
         <tr><td><br /></td>
             <td><br /></td></tr>
 
