--- a/help/items/views.html
+++ b/help/items/views.html
@@ -13,7 +13,7 @@
 
     <h2>Viewing and changing existing items</h2>
     To view an item already stored in Data Crow, open the module that contains that item. By default all
-    the items belonging to the module are shown. You can filter on the items so that the view only shows the items you are looking for 
+    the items belonging to the module are shown. You can filter on the items so that the view only shows the items you are looking for
     (<a href="../filters/filters.html">show me</a>).<br>
     An item can be opened by either double-clicking on the item or using the right-click menu. An item is opened in the item form.
 
@@ -24,7 +24,7 @@
     Instead of opening an item in the item form, you can change, delete, or update data directly in the table view. To edit a cell in the row, place the cursor in the cell and press F2. You can cycle through the rows using the arrow keys. Changes are saved by using the right-click menu or by pressing the "Save changes" button
 
     <h1>Sorting</h1>
-    To sort the items in the view right-click on the view and select "sort" from the popup-menu. On the left-handside the available fields are shown on the right-handside fields are shown on which is sorted. Data Crow will sort the result top to bottom. Use the arrow buttons to move fields from the left-handside to the right-handise and vica versa or double-click the corresponding field.
+    For information on sorting you need to go <a href="../items/sort.html">here</a>.
 
   </body>
 </html>
