*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -107,13 +107,14 @@
 
     <br><br>
 
-    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
-    Fixes the reporting for the movie module and a possible startup error related to languages.
+    <span class="content_main_bold">06/02/2009<br>Data Crow 3.4.8 patch 2 has been released</span><br>
+    This patch fixes the online services for the book module and the saving mechanism.
+
 
     <br><br>
 
-    <span class="content_main_bold">25/01/2009<br>Data Crow 3.4.8 has been released</span><br>
-    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
+    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
+    Fixes the reporting for the movie module and a possible startup error related to languages.
 
 
     <!-- NEWS END -->
