--- a/homepage/news.html
+++ b/homepage/news.html
@@ -66,6 +66,10 @@
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">06/02/2009 ~ Data Crow 3.4.8 patch 2 has been released</span><br><br>
+        This patch fixes the online services for the book module. Changes have been made to the saving mechanism for new items which should fix the NullPointerExceptions some people experienced (unconfirmed fix).
+
+        <br><br><br>
         <span class="content_main_bold">26/01/2009 ~ Data Crow 3.4.8 patch 1 has been released</span><br><br>
         Fixes the reporting for the movie module and a possible startup error related to languages.
 
@@ -226,13 +230,14 @@
 
     <br><br>
 
-    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
-    Fixes the reporting for the movie module and a possible startup error related to languages.
+    <span class="content_main_bold">06/02/2009<br>Data Crow 3.4.8 patch 2 has been released</span><br>
+    This patch fixes the online services for the book module and the saving mechanism.
+
 
     <br><br>
 
-    <span class="content_main_bold">25/01/2009<br>Data Crow 3.4.8 has been released</span><br>
-    Fixes the PDF reporting and the module creation wizard. Improves to the music album import.
+    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
+    Fixes the reporting for the movie module and a possible startup error related to languages.
 
 
     <!-- NEWS END -->
