--- a/homepage/news.html
+++ b/homepage/news.html
@@ -68,6 +68,7 @@
         <br><br><br>
         <span class="content_main_bold">06/02/2009 ~ Data Crow 3.4.8 patch 2 has been released</span><br><br>
         This patch fixes the online services for the book module. Changes have been made to the saving mechanism for new items which should fix the NullPointerExceptions some people experienced (unconfirmed fix).
+        The German translation has been updated by Linux (thanks!!).
 
         <br><br><br>
         <span class="content_main_bold">26/01/2009 ~ Data Crow 3.4.8 patch 1 has been released</span><br><br>
