*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -107,17 +107,18 @@
 
     <br><br>
 
+
+	<span class="content_main_bold">04/03/2009<br> Data Crow 3.4.8 patch 3 has been released</span><br>
+	This patch enables Mac users to use Data Crow once again and fixes the JTattoo errors.
+
+	<br><br>
+
     <span class="content_main_bold">06/02/2009<br>Data Crow 3.4.8 patch 2 has been released</span><br>
     This patch fixes the online services for the book module and the saving mechanism.
 
 
-    <br><br>
-
-    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
-    Fixes the reporting for the movie module and a possible startup error related to languages.
-
-
     <!-- NEWS END -->
+
 
   </td>
 
