--- a/homepage/news.html
+++ b/homepage/news.html
@@ -66,6 +66,10 @@
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">04/03/2009 ~ Data Crow 3.4.8 patch 3 has been released</span><br><br>
+        A couple of important fixes are contained in this patch. This patch enables Mac users to use Data Crow once again. The errors after upgrading to Java 1.6.0 Update 12 have also been fixed.
+
+        <br><br><br>
         <span class="content_main_bold">06/02/2009 ~ Data Crow 3.4.8 patch 2 has been released</span><br><br>
         This patch fixes the online services for the book module. Changes have been made to the saving mechanism for new items which should fix the NullPointerExceptions some people experienced (unconfirmed fix).
         The German translation has been updated by Linux (thanks!!).
@@ -231,14 +235,14 @@
 
     <br><br>
 
+
+	<span class="content_main_bold">04/03/2009<br> Data Crow 3.4.8 patch 3 has been released</span><br>
+	This patch enables Mac users to use Data Crow once again and fixes the JTattoo errors.
+
+	<br><br>
+
     <span class="content_main_bold">06/02/2009<br>Data Crow 3.4.8 patch 2 has been released</span><br>
     This patch fixes the online services for the book module and the saving mechanism.
-
-
-    <br><br>
-
-    <span class="content_main_bold">26/01/2009<br>Data Crow 3.4.8 patch 1 has been released</span><br>
-    Fixes the reporting for the movie module and a possible startup error related to languages.
 
 
     <!-- NEWS END -->
