*** empty log message ***

--- a/help/items/templates.html
+++ b/help/items/templates.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Templates</h1>
     	In case you want to assign certain default values to newly created items you can define these values in a template.
-    	The template functionality can be found in the "tools" menu.
+    	The template functionality can be found in the "administration" menu.
 
     	<br><br>
 
