*** empty log message ***

--- a/homepage/links.html
+++ b/homepage/links.html
@@ -77,6 +77,7 @@
         <br><br><br>
 
         <span class="content_main_bold">Sites mentioning Data Crow</span><br><br>
+        <li/><a href="http://www.hitechlegion.com/reviews/software/390-datacrow?showall=1" target="new">HiTechLegion</a>
         <li/><a href="http://www.freewarebb.com/Data-Crow-321-file173.html" target="new">FreewareBB</a>
         <li/><a href="http://linux.softpedia.com/get/Information-Management/Data-Crow-18608.shtml" target="new">Softpedia</a>
         <li/><a href="http://tweakers.net/meuktracker/17602/data-crow-321.html" target="new">Tweakers</a>
