--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -66,14 +66,22 @@
         There are some sites which have written an article or a review on Data Crow. Some of these reviews might be based on an older version of the Data Crow cataloguer software. However these reviews and articles might still give you a better impression of the Data Crow software.
 
         <br><br><br>
+        <span class="content_main_bold">HiTechLegion</span><br><br>
+
+        <i>We have hundreds of CD's, books, DVD's, Blu-Ray discs, tapes, so much media and no way to keep track of it. How many times have loaned out a book or a movie only to forget who has it and then when you need it you don't have it. How frustrating is that?
+           I think we have the solution. Data Crow is an open source java application pioneered by Robert Jan van der Waals</i>
+        <a href="http://www.hitechlegion.com/reviews/software/390-datacrow?showall=1">full review</a>
+
+
+        <br><br><br>
         <span class="content_main_bold">Penguin sightings review on Data Crow 3.2</span><br><br>
 
-        <i>Chances are, that somewhere in your house, you have a tall stack of music CDs. Perhaps not one, but two, or three, or even more, stacked up all over the place. Maybe you also have a shelf full of DVDs, as well, and a pile of video games next to your game console. Like most people, you probably aren’t very organized, either, and more often than not, you can’t remember which titles you have, much less find them all. And then, maybe, you lend out items from your collection to some of your friends. Can you always remember to whom it was that you gave what? If this is an accurate depiction of your life, then Data Crow is for you.</i>
+        <i>Chances are, that somewhere in your house, you have a tall stack of music CDs. Perhaps not one, but two, or three, or even more, stacked up all over the place. Maybe you also have a shelf full of DVDs, as well, and a pile of video games next to your game console. Like most people, you probably aren't very organized, either, and more often than not, you can't remember which titles you have, much less find them all. And then, maybe, you lend out items from your collection to some of your friends. Can you always remember to whom it was that you gave what? If this is an accurate depiction of your life, then Data Crow is for you.</i>
         <a href="http://www.penguinsightings.org/database/data-crow/">full review</a>
 
         <br><br><br>
         <span class="content_main_bold">Computer Totaal</span><br><br>
-        <i>Wie vroeger een verzameling aanlegde, deed dit met postzegels, theezakjes, kroonkurken, voetbalplaatjes etc. Tegenwoordig is het moeilijk om geen verzamelaar te zijn. Foto’s, video’s, films, software, contactpersonen: er zijn zoveel facetten van ons leven die te groot of uitgebreid zijn om te onthouden, dat het wel heel handig zou zijn als er één programma was om al die dingen te organiseren. Data Crow pretendeert dat programma te zijn.</i>
+        <i>Wie vroeger een verzameling aanlegde, deed dit met postzegels, theezakjes, kroonkurken, voetbalplaatjes etc. Tegenwoordig is het moeilijk om geen verzamelaar te zijn. Foto's, video's, films, software, contactpersonen: er zijn zoveel facetten van ons leven die te groot of uitgebreid zijn om te onthouden, dat het wel heel handig zou zijn als er een programma was om al die dingen te organiseren. Data Crow pretendeert dat programma te zijn.</i>
         <a href="http://www.computertotaal.nl/web/Artikelpaginas/Download-artikel/Data-Crow-3.3.htm">full review</a>
 
         <br><br><br>
