*** empty log message ***

--- a/homepage/donate.html
+++ b/homepage/donate.html
@@ -94,17 +94,16 @@
 
     <span class="content_main_bold">Latest news</span>
 
+
     <br><br>
 
+    <span class="content_main_bold">02/06/2009<br>Data Crow 3.4.9 beta has been released</span><br>
+    Improved mass update, customizable item form tabs and allows you to change fields using the module wizard.
 
-	<span class="content_main_bold">04/03/2009<br> Data Crow 3.4.8 patch 3 has been released</span><br>
-	This patch enables Mac users to use Data Crow once again and fixes the JTattoo errors.
+    <br><br>
 
-	<br><br>
-
-    <span class="content_main_bold">06/02/2009<br>Data Crow 3.4.8 patch 2 has been released</span><br>
-    This patch fixes the online services for the book module and the saving mechanism.
-
+    <span class="content_main_bold">04/03/2009<br> Data Crow 3.4.8 patch 3 has been released</span><br>
+    This patch enables Mac users to use Data Crow once again and fixes the JTattoo errors.
 
     <!-- NEWS END -->
 
