--- a/homepage/download.html
+++ b/homepage/download.html
@@ -76,6 +76,15 @@
 
         <br><br>
 
+        <span class="content_main_bold">Data Crow - beta</span><br><br>
+        <i>Data Crow requires Java from <a href="http://java.sun.com">Sun</a>. Older versions can be found <a href="http://sourceforge.net/project/showfiles.php?group_id=84631&package_id=87383" target="new">here</a></i><br><br>
+        <li>Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_BETA_zipped.zip" target="new">3.4.9 beta</a></li>
+        <li>Full version (installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_BETA_installer.zip" target="new">3.4.9 beta</a></li>
+        <li>Full version (windows installer): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_BETA_installer.exe" target="new">3.4.9 beta</a></li>
+        <li>Source code: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_BETA_source.zip" target="new">3.4.9 beta</a></li>
+
+        <br><br>
+
         <span class="content_main_bold">Data Crow web module</span><br><br>
         <i>The web module is an extension and should be installed on top of a full Data Crow installation.</i><br><br>
         <li>Web module: Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_zipped.zip" target="new">1.3</a></li>
@@ -101,17 +110,16 @@
 
     <span class="content_main_bold">Latest news</span>
 
+
     <br><br>
 
+    <span class="content_main_bold">02/06/2009<br>Data Crow 3.4.9 beta has been released</span><br>
+    Improved mass update, customizable item form tabs and allows you to change fields using the module wizard.
 
-	<span class="content_main_bold">04/03/2009<br> Data Crow 3.4.8 patch 3 has been released</span><br>
-	This patch enables Mac users to use Data Crow once again and fixes the JTattoo errors.
+    <br><br>
 
-	<br><br>
-
-    <span class="content_main_bold">06/02/2009<br>Data Crow 3.4.8 patch 2 has been released</span><br>
-    This patch fixes the online services for the book module and the saving mechanism.
-
+    <span class="content_main_bold">04/03/2009<br> Data Crow 3.4.8 patch 3 has been released</span><br>
+    This patch enables Mac users to use Data Crow once again and fixes the JTattoo errors.
 
     <!-- NEWS END -->
 
