--- a/homepage/news.html
+++ b/homepage/news.html
@@ -65,6 +65,12 @@
         <span class="content_main_bold">News</span><br><br>
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
+
+        <br><br><br>
+        <span class="content_main_bold">02/06/2009 ~ Data Crow 3.4.9 beta has been released</span><br><br>
+        This beta version contains many improvements. The module wizard enables the user to change a field (with limitations). The mass update is now capable to use all search modes of the online search. The tabs as displayed on the item form are now customizable. Beware that this is a beta version.
+        You can find this release in the main download page.
+
         <br><br><br>
         <span class="content_main_bold">04/03/2009 ~ Data Crow 3.4.8 patch 3 has been released</span><br><br>
         A couple of important fixes are contained in this patch. This patch enables Mac users to use Data Crow once again. The errors after upgrading to Java 1.6.0 Update 12 have also been fixed.
@@ -233,16 +239,16 @@
 
     <span class="content_main_bold">Latest news</span>
 
+
     <br><br>
 
+    <span class="content_main_bold">02/06/2009<br>Data Crow 3.4.9 beta has been released</span><br>
+    Improved mass update, customizable item form tabs and allows you to change fields using the module wizard.
+
+    <br><br>
 
 	<span class="content_main_bold">04/03/2009<br> Data Crow 3.4.8 patch 3 has been released</span><br>
 	This patch enables Mac users to use Data Crow once again and fixes the JTattoo errors.
-
-	<br><br>
-
-    <span class="content_main_bold">06/02/2009<br>Data Crow 3.4.8 patch 2 has been released</span><br>
-    This patch fixes the online services for the book module and the saving mechanism.
 
 
     <!-- NEWS END -->
